--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
   },
   "homepage": "https://github.com/PaulPopat/paul-cloud#readme",
   "dependencies": {
+    "@paulpopat/safe-type": "^2.1.0",
+    "bootstrap": "^5.0.0-beta2",
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1"
+    "sass": "^1.32.8"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
-    "@types/styled-components": "^5.1.7",
     "typescript": "^4.2.2"
   }
 }
