--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "**/.DS_Store": true,
     ".vscode": true,
     "node_modules": true,
-    ".next": true
+    ".next": true,
+    ".res": true
   }
 }
