--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -21,14 +21,20 @@
   "dependencies": {
     "@paulpopat/safe-type": "^2.1.0",
     "bootstrap": "^5.0.0-beta2",
+    "fs-extra": "^9.1.0",
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "sqlite3": "^5.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.7",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/sqlite3": "^3.1.7",
+    "@types/uuid": "^8.3.0",
     "typescript": "^4.2.2"
   }
 }
