--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/PaulPopat/paul-cloud#readme",
   "dependencies": {
+    "@paulpopat/api-interface": "^1.1.12",
     "@paulpopat/safe-type": "^2.1.0",
     "bootstrap": "^5.0.0-beta2",
     "fs-extra": "^9.1.0",
