--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@paulpopat/safe-type": "^2.1.0",
     "bootstrap": "^5.0.0-beta2",
     "fs-extra": "^9.1.0",
+    "mime-types": "^2.1.29",
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.7",
+    "@types/mime-types": "^2.1.0",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/sqlite3": "^3.1.7",
