--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@paulpopat/api-interface": "^1.1.12",
     "@paulpopat/safe-type": "^2.1.0",
     "bootstrap": "^5.0.0-beta2",
+    "formidable": "^1.2.2",
     "fs-extra": "^9.1.0",
     "mime-types": "^2.1.29",
     "next": "^10.0.7",
@@ -32,6 +33,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/formidable": "^1.0.32",
     "@types/fs-extra": "^9.0.7",
     "@types/mime-types": "^2.1.0",
     "@types/node": "^14.14.31",
