Added a file editor

--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   },
   "homepage": "https://github.com/PaulPopat/paul-cloud#readme",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-decoupled-document": "^25.0.0",
     "@paulpopat/api-interface": "^1.1.12",
     "@paulpopat/safe-type": "^2.1.0",
     "bootstrap": "^5.0.0-beta2",
     "formidable": "^1.2.2",
     "fs-extra": "^9.1.0",
+    "mammoth": "^1.4.16",
     "mime-types": "^2.1.29",
     "next": "^10.0.7",
+    "puppeteer": "^8.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.32.8",
