--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/PaulPopat/paul-cloud.git"
   },
-  "author": "",
+  "author": "paulpopat",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/PaulPopat/paul-cloud/issues"
