--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.0.0-beta2",
     "formidable": "^1.2.2",
     "fs-extra": "^9.1.0",
+    "glob": "^7.1.6",
     "mammoth": "^1.4.16",
     "mime-types": "^2.1.29",
     "next": "^10.0.7",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/formidable": "^1.0.32",
     "@types/fs-extra": "^9.0.7",
+    "@types/glob": "^7.1.3",
     "@types/mime-types": "^2.1.0",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
