--- a/not-cloud-server/package.json
+++ b/not-cloud-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -26,9 +26,11 @@
     "formidable": "^1.2.2",
     "fs-extra": "^9.1.0",
     "glob": "^7.1.6",
+    "jspdf": "^2.3.1",
     "mammoth": "^1.4.16",
     "mime-types": "^2.1.29",
     "next": "^10.0.7",
+    "pg": "^8.5.1",
     "puppeteer": "^8.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -42,6 +44,7 @@
     "@types/glob": "^7.1.3",
     "@types/mime-types": "^2.1.0",
     "@types/node": "^14.14.31",
+    "@types/pg": "^7.14.11",
     "@types/react": "^17.0.2",
     "@types/sqlite3": "^3.1.7",
     "@types/uuid": "^8.3.0",
