Created a separate component store for extra tools

--- a/not-cloud-components/.vscode/settings.json
+++ b/not-cloud-components/.vscode/settings.json
@@ -6,10 +6,6 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     ".vscode": true,
-    "node_modules": true,
-    ".next": true,
-    ".res": true,
-    "common": true,
-    "style": true
+    "node_modules": true
   }
 }
