--- a/not-cloud-server/tsconfig.json
+++ b/not-cloud-server/tsconfig.json
@@ -22,7 +22,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "../not-cloud-components/src/html.ts"  ],
   "exclude": [
     "node_modules"
   ]
