Fixed sync client bugs

--- a/not-cloud-sync/.vscode/settings.json
+++ b/not-cloud-sync/.vscode/settings.json
@@ -10,6 +10,7 @@
     "src/common": true,
     "dist": true,
     "style": true,
-    ".molecular": true
+    ".molecular": true,
+    "src/style": true
   }
 }
