Added production build script and export and import

--- a/not-cloud-server/.vscode/settings.json
+++ b/not-cloud-server/.vscode/settings.json
@@ -11,6 +11,7 @@
     ".res": true,
     "common": true,
     "style": true,
-    "file-store": true
+    "file-store": true,
+    "public/application": true
   }
 }
