--- a/not-cloud-server/Dockerfile
+++ b/not-cloud-server/Dockerfile
@@ -21,6 +21,7 @@ COPY --from=builder /app/public ./public
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/update-scripts ./update-scripts
+COPY --from=builder /app/dist ./dist
 
 RUN addgroup -g 1001 -S nodejs
 RUN adduser -S nextjs -u 1001
