--- a/not-cloud-server/package.json
+++ b/not-cloud-server/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "ts-node --project tsconfig.server.json server/index.ts",
+    "build:server": "tsc --project tsconfig.server.json",
+    "build:next": "next build",
+    "build": "npm run build:next && npm run build:server",
+    "start": "NODE_ENV=production next start",
     "postinstall": "rimraf common/ && rimraf styles/ && copyfiles -f ../not-cloud-components/src/*.* common/ && copyfiles -f ../not-cloud-components/styles/*.* style/",
     "docker:dev": "npm run postinstall && docker-compose -f docker-compose.yml -f docker-compose.debug.yml up --build",
     "docker:prod": "npm run postinstall && docker-compose up --build -d"
@@ -26,6 +28,7 @@
     "@paulpopat/api-interface": "^1.1.12",
     "@paulpopat/safe-type": "^2.1.0",
     "bootstrap": "^5.0.0-beta2",
+    "express": "^4.17.1",
     "formidable": "^1.2.2",
     "fs-extra": "^9.1.0",
     "glob": "^7.1.6",
@@ -42,6 +45,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/formidable": "^1.0.32",
     "@types/fs-extra": "^9.0.7",
     "@types/glob": "^7.1.3",
@@ -53,6 +57,7 @@
     "@types/uuid": "^8.3.0",
     "copyfiles": "^2.4.1",
     "rimraf": "^3.0.2",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   }
 }
