--- a/not-cloud-server/docker-compose.yml
+++ b/not-cloud-server/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "3000:3000"
       - "80:80"
-    command: ["node_modules/.bin/next", "start"]
+    command: ["npm", "run", "start"]
     restart: unless-stopped
     volumes:
       - /path/to/local/storage:/file-store
