Fixed 0.0.9... Again... Don't tell anyone!

--- a/not-cloud-server/.vscode/settings.json
+++ b/not-cloud-server/.vscode/settings.json
@@ -12,6 +12,7 @@
     "common": true,
     "style": true,
     "file-store": true,
-    "public/application": true
+    "public/application": true,
+    "dist": true
   }
 }
