--- a/not-cloud-server/Dockerfile
+++ b/not-cloud-server/Dockerfile
@@ -22,6 +22,7 @@ COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/update-scripts ./update-scripts
 COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/package.json ./package.json
 
 RUN addgroup -g 1001 -S nodejs
 RUN adduser -S nextjs -u 1001
